log
Thu 23 Mar 2023 02:19:46 PM UTC: 
 tests:  0|6
total_score: 0/70
968f38d
Thu 23 Mar 2023 02:35:11 PM UTC: 
 list.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:44:11: error: variable ‘aux’ set but not used [-Werror=unused-but-set-variable]
   44 |     Node *aux =list->current;
      |           ^~~
cc1: all warnings being treated as errors
Compilation failed
ed9dec8
Thu 23 Mar 2023 02:35:50 PM UTC: 
 list.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  0|6
total_score: 0/70
faf5ec3
Thu 23 Mar 2023 02:40:53 PM UTC: 
 list.c | 11 +++++++----
 1 file changed, 7 insertions(+), 4 deletions(-)
 tests:  1|5
total_score: 10/70
312c804
Thu 23 Mar 2023 02:46:14 PM UTC: 
 list.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
 tests:  0|0
b0e7a5f
